--- a/AEA6/damxat-meridia/app/src/main/AndroidManifest.xml
+++ b/AEA6/damxat-meridia/app/src/main/AndroidManifest.xml
@@ -2,7 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.damxat">
 
-    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,18 +12,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.XatApp">
-
         <activity
-            android:name="com.example.damxat.Views.Activities.LoginActivity"
+            android:name=".Views.Activities.LoginActivity"
             android:exported="false" />
         <activity
-            android:name="com.example.damxat.Views.Activities.MainActivity"
+            android:name=".Views.Activities.MainActivity"
             android:exported="false" />
         <activity
-            android:name="com.example.damxat.Views.Activities.RegisterActivity"
+            android:name=".Views.Activities.RegisterActivity"
             android:exported="false" />
         <activity
-            android:name="com.example.damxat.Views.Activities.StartActivity"
+            android:name=".Views.Activities.StartActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -29,7 +30,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
     </application>
 
 </manifest>
